[package]
name = "chip8"
version = "0.1.1"
authors = ["Chris Konstad <chriskon149@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["chip8", "emulator"]

[lib]
name = "chip8"
path = "src/lib.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"
doc = false

[dependencies]
bit-vec = "0.4.3"
clap = "*"
env_logger = "0.3"
log = "0.3"
rand = "0.3"
sdl2 = "0.19"
